samples/_failures_safe/1761688088_39b7bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_511ad5ce.c: In function ‘main’:
./samples/SAFE/__tmp_511ad5ce.c:135:20: error: missing terminating " character
  135 |             printf("Invalid input: only '0' and '1' allowed\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_511ad5ce.c:135:13: error: expected expression at end of input
  135 |             printf("Invalid input: only '0' and '1' allowed\n
      |             ^~~~~~
./samples/SAFE/__tmp_511ad5ce.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_511ad5ce.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_511ad5ce.c:135:13: error: expected declaration or statement at end of input
